# visionmagic

./: .gitattributes  README.md
docs/: 0.bootstrap.js  index.html  repair.html  segmentation.html  simplification.html
visionmagic/: Cargo.toml
visionmagic/src/: aggregation.rs  cluster_stat.rs  clustering.rs  lib.rs  segmentation.rs  simplification.rs
webapp/: Cargo.toml
webapp/app/: package-lock.json  package.json  repair.html  segmentation.html  simplification.html
webapp/app/lib/: impression.js  repair.js
webapp/src/: canvas.rs  lib.rs  repair.rs  segmentation.rs  simplification.rs  svg.rs
