[package]
name = "visionmagic"
version = "0.2.0"
authors = ["Chris Tsang <tyt2y7@gmail.com>"]
edition = "2018"
description = "Collection of vision & graphics algorithms"
license = "MIT OR Apache-2.0"
homepage = "http://www.visioniechor.org/"
repository = "https://github.com/visioniechor/visionmagic/"
categories = ["graphics", "computer-vision"]
keywords = ["computer-graphics", "computer-vision"]

[lib]
crate-type = ["rlib"]

[dependencies]
log = "0.4"
visioniechor = "0.4.0"